--- a/gradle.properties
+++ b/gradle.properties
@@ -42,7 +42,7 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=longpower_compat
+mod_id=longpowercompat
 # The human-readable display name for the mod.
 mod_name=Long Power Compat
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
@@ -65,6 +65,8 @@ flux_networks_id=5234697
 gregtech_id=6842690
 greg_fluxology_id=6770837
 mekanism_id=6552911
+multiblocked2_id=6899229
+jade_id=6855440
 bcore_version=3.2.1.+
 ccl_version=4.4.0.+
 de_version=3.1.2.+
