--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -67,8 +67,8 @@ description='''${mod_description}'''
     side="BOTH"
 [[dependencies.${mod_id}]]
     modId="fluxnetworks"
-    mandatory=true
-    versionRange="[7.2.1.0,)"
+    mandatory=false
+    versionRange="[7.2.1,)"
     ordering="AFTER"
     side="BOTH"
 [[dependencies.${mod_id}]]
@@ -87,6 +87,12 @@ description='''${mod_description}'''
     modId="gregfluxology"
     mandatory=false
     versionRange="[0.0.2,)"
+    ordering="AFTER"
+    side="BOTH"
+[[dependencies.${mod_id}]]
+    modId="mekanism"
+    mandatory=false
+    versionRange="[10.4.16,)"
     ordering="AFTER"
     side="BOTH"
 
