--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ mod_id=longpowercompat
 # The human-readable display name for the mod.
 mod_name=Long Power Compat
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=GPL
+mod_license=LGPLv3
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -67,6 +67,7 @@ greg_fluxology_id=6770837
 mekanism_id=6552911
 multiblocked2_id=6899229
 jade_id=6855440
+pipez_id=4916633
 bcore_version=3.2.1.+
 ccl_version=4.4.0.+
 de_version=3.1.2.+
