--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -69,31 +69,31 @@ description='''${mod_description}'''
     modId="fluxnetworks"
     mandatory=false
     versionRange="[7.2.1,)"
-    ordering="AFTER"
+    ordering="BEFORE"
     side="BOTH"
 [[dependencies.${mod_id}]]
     modId="brandonscore"
     mandatory=false
     versionRange="[3.2.1,)"
-    ordering="AFTER"
+    ordering="BEFORE"
     side="BOTH"
 [[dependencies.${mod_id}]]
     modId="gtceu"
     mandatory=false
     versionRange="[7.1.0,)"
-    ordering="AFTER"
+    ordering="BEFORE"
     side="BOTH"
 [[dependencies.${mod_id}]]
     modId="gregfluxology"
     mandatory=false
     versionRange="[0.0.2,)"
-    ordering="AFTER"
+    ordering="BEFORE"
     side="BOTH"
 [[dependencies.${mod_id}]]
     modId="mekanism"
     mandatory=false
     versionRange="[10.4.16,)"
-    ordering="AFTER"
+    ordering="BEFORE"
     side="BOTH"
 
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
